--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,24 +2,47 @@
 <html>
     <head>
         <link rel="stylesheet" href="../../public/stylesheets/normalize.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
-  <link rel="stylesheet" href="../../public/stylesheets/lib.css">
-  <title>Finstagram</title>
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
+         <link rel="stylesheet" href="../../public/stylesheets/lib.css">
+         <link rel="stylesheet" href="../../public/stylesheets/app.css">
+         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+         
         <title>Finstagram</title>
     </head>
     <body>
         <header>
-            <h1>Finstagram</h1>
+            <h1>FINSTAGRAM</h1>
         </header>
         <main role="main">
             <article class="post">
                 <div class="user-info">
-                    <img src="http://naserca.com/images/sharky_j.jpg">
+                    <img src="http://vignette1.wikia.nocookie.net/disney/images/f/ff/James-p-sulley-sullivan.png/revision/latest?cb=20131027234614">
+                    <h2>msull291</h2>
+                    <h3>53 Minutes Ago</h3>
                 </div>
-                    <h2>Sharky_J</h2>
-                    <span><h3>15 Minutes Ago</h3></span>
                 <a class="photo" href="#">
-                    <img src="http://naserca.com/images/shark.png" alt="post from sharky_j">
+                    <img src="https://metrouk2.files.wordpress.com/2017/07/187144066.jpg?w=748&h=498&crop=1" alt="post from sharky_j">
+                </a>
+                <div class="actions">
+                    47 likes
+                    <span class="comment-count">0 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            msull291: Look how cute!
+                        </p>
+                    </li>
+                </ul>
+            </article>
+            <article class="post">
+                <div class="user-info">
+                    <img src="http://naserca.com/images/kirk_whalum.jpg" alt="kirkwhalum">
+                    <h2>kirk_whalum</h2>
+                    <h3>1 hour ago</h3>
+                </div>
+                <a class="photo" href="#">
+                     <img src="http://naserca.com/images/whale.jpg" alt="post from kirk_whalum">
                 </a>
                 <div class="actions">
                     0 likes
@@ -28,11 +51,34 @@
                 <ul class="comments">
                     <li>
                         <p>
-                            sharky_j: Out for the long weekend... Too embarrassed to show y'all my beach bod!
+                            kirk_whalum: #weekendvibes
                         </p>
                     </li>
                 </ul>
             </article>
+            <article class="post">
+                <div class="user-info">
+                    <img src="http://naserca.com/images/marlin_peppa.jpg" alt="marlin_peppa">
+                    <h2>marlin_peppa</h2>
+                    <h3>3 hours ago</h3>
+                </div>
+                <a class="photo" href="#">
+                    <img src="http://naserca.com/images/marlin.jpg" alt="post from marlin_peppa">
+                </a>
+                <div class="actions">
+                    0 likes
+                    <span class="comment-count">0 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            marlin_peppa: lunchtime! ;)
+                        </p>
+                    </li>
+                </ul>
+            </article>
+            
+            
         </main>
     </body>
 </html>
